<resources>
    <string name="app_name">Urbanisti</string>
    <string name="title_activity_main_screen">Urbanisti</string>
    <string name="facebook_app_id">1916678708584576</string>
    <string name="sender_id">305148276044</string>
    <string name="api_key">AIzaSyBlMs38H5nB-uHm1xBMQ3k6HaD4b_meXN0</string>

    <string name="min_tags">Použi aspoň jeden tag,prosím, aby bol tvoj príspevok lepšie označený.</string>
    <string name="max_tags">4 tagy sú ideál, viac netreba. ;)</string>
    <string name="no_title">Sem patrí nadpis</string>
    <string name="no_text">Každý príspevok potrebuje text.</string>
    <string name="complete_action">Dokonci akciu s</string>
    <string name="no_internet_connection">Na správne fungovanie našej appky je nevyhnutné pripojenie k internetu.</string>
    <string name="no_address_found">Adresa nenájdená.</string>
    <string name="you_wasnt_there">Je nám ľúto, že si dlho nebol aktívny v našej aplikácii, stálo ťa to XY reputácie. Ale nezúfaj, je to zanedbateľné oproti tomu, čo môžeš získať, ak budeš aktívnejší. :)</string>
    <string name="just_now">práve teraz</string>
    <string name="one_minute_ago">pred minútou</string>
    <string name="one_hour_ago">pred hodinou</string>
    <string name="yesterday">včera</string>
    <string name="x_days_ago">pred X dňami</string>
    <string name="x_minutes_ago">pred X minútami</string>
    <string name="x_hours_ago">pred X hodinami</string>
    <string name="username">Prezývka</string>
    <string name="button_pick_picture">Vybrať obrázok</string>
    <string name="button_continue">Ďalej</string>
    <string name="deactivate_msg">Tvoje konto bolo zrušené, ak si myslíš, že to je omyl, určite nám daj vedieť.</string>
    <string name="no_photo_selected">Človek bez tváre je ako ideálny kontajner na zmiešaný odpad - prázdny. Pridaj aj svoju fotku, prosím. :)</string>
    <string name="bad_username">Vymysli si prezývku dlhú 4 až 15 znakov a špeciálne znaky si, prosím, ušetri na iné texty. :D</string>
    <string name="duplicate_name">Takéto meno už pod naším virtuálnym slnkom existuje, skús iné.</string>
    <string name="upload_success">Obrázok je tam!</string>
    <string name="upload_in_progress">Chvíľku strpenia, obrázok sa načítava.</string>
    <string name="rb_problems">Problémy</string>
    <string name="rb_solved">Vyriešené</string>
    <string name="is_worked_on">Na tomto probléme sa pracuje.</string>
    <string name="free_problem">Problému sa ešte nikto nechytil.</string>
    <string name="b_start_solving">Poď do toho!</string>
    <string name="b_problem_full">?</string>
    <string name="b_join_problem">Pridaj sa!</string>
    <string name="tv_participants_num_of_workers">Na probléme práve pracuje ...</string>
    <string name="kicked_from_group">Mrzí nás to, ale tvoja skupina s tebou už nechcela spolupracovať.</string>
    <string name="added_to_your_problems">Pridané do tvojich riešených problémov.</string>
    <string name="problem_full">Tento problém rieši už dosť ľudí.</string>
    <string name="problem_already_in">Na riešení sa už spolupodielaš.</string>
    <string name="problem_is_not_joinable">Tento problém hravo zvládne jeden, skús ďalšie.</string>
    <string name="max_problem_reached">Aktuálne riešiš dosť problémov. Radšej vyrieš najprv tie, potom sa pusť do ďalších.</string>

    <string name="default_rank">Obcan</string>
    <string name="rank_level1">SuperObcan</string>
    <string name="rank_level2">SuperSuperObcan</string>
    <!-- KEEP THIS FORMATING (RANKS)!!!  -->

    <string name="Posts_et_text">Text</string>
    <string name="Posts_et_title">Názov</string>
    <string name="Posts_b_addImg2">Druhý obrázok</string>
    <string name="Posts_b_addImg1">Prvý obrázok</string>
    <string name="Posts_et_location">Ulica</string>
    <string name="Posts_et_tags">Tagy</string>
    <string name="Posts_b_post">Zverejniť</string>
    <string name="posts_tw_categories">Kategórie</string>

    <string name="ci_b_edit">edit</string>
    <string name="ci_b_plus">+?</string>
    <string name="ci_b_minus">-?</string>
    <string name="ci_b_editPost">Edti Post ??</string>

    <string name="mainscreen_b_signOut">Odhlásiť sa</string>

    <string name="createCom_et_TextDialog">Komentar</string>
    <string name="createCom_cb_dc">Priama sprava</string>
    <string name="createCom_b_createComment">Komentuj</string>
    <string name="openPost_b_editPost">Uprav</string>

    <string name="editCom_b_change">Zmen</string>
    <string name="editCom_b_cancel">Zrus</string>
    <string name="editCom_b_delete">Zmaz</string>

    <string name="db_create_problem_rb_joinable">Hľadáš pomocníkov na vyriešenie tohto problému?</string>
    <string name="db_create_problem_et_name_hint">Jednoduchý názov tohto problému.</string>
    <string name="db_create_problem_tv_warning">UPOZORNENIE! Nerieš problémy, ktoré riešiť nechceš. Je to zbytočné a žiaľ, potom budeme musieť obmedziť tvoju aktivitu. Ale každej aktivite, ktorú myslíš úprimne a vážne, sa naozaj tešíme. Ďakujeme! :)</string>
    <string name="db_create_problem_b_create_text">Opíš problém</string>
    <string name="db_create_problem_snackbar_invalid_name">Na efektívne riešenie problému je dôležité ho správne pomenovať. Poď na to!</string>

    <string name="profile_tv_reputation">Osobná reputácia</string>
    <string name="profile_b_savedPosts">Príspevky, ktoré ťa zaujali</string>


    <string name="problems_feed_tv_error">Žiaľ, aj majster tesár sa niekedy utne. Nedokázali sme načítať aktuálny obsah, zrejme je problém s pripojením na internet.</string>
    <string name="problems_feed_tv_no_problems">Aktuálne nie si zapojený do riešenia žiadneho problému. Prezri si news feed celej Komunity a do nejakého sa pridaj. ;)</string>
    <string name="problems_feed_tv_not_all_items_were_loaded">Niektore príspevky sa nenačítali, daj im ešte jednu šancu, prosím. :)</string>
    <string name="problem_item_b_canel_problem">You shall not pass!</string>
    <string name="problem_item_b_solved">Zvládnuté a hotové</string>
    <string name="address_found">No paráda, túto adresu sme našli. :)</string>
    <string name="address_could_not_been_found">Stratili sme sa na mape, skús to, prosím, znova.</string>

    <string name="b_edit_participant_kick_out">Defenestrovať</string>
    <string name="b_edit_participant_show_contact">Kontakt</string>

    <string name="kick_out_confirm">Chceš naozaj poslať %1$ kade ľahšie a ďalej s ním na nespolupracovať na vyriešení tohto problému? Táto akcia je nevratná.</string>
    <string name="kicked_out_msg">%1$ bol defenestrovaný.</string>
    <string name="leave_from_problem_not_owner">Naozaj chces odist z tohoto problemu?</string>
    <string name="leave_from_problem_owner">Skutočne chceš ukončiť a nechať navždy zabudnuté riešenie tohto problému z pozície zakladateľa? (Mrzí nás to, ale okrem iného to ovplyvní aj tvoju reputáciu.)</string>
    <string name="leave_message">Je nám ľúto, že problém nebol vyriešený a je vymazaný z histórie Komunity. Veríme, že to nie je tvoja bežná prax, a rada od nás  znie: Nabudúce si zodpovednejšie premysli svoje kroky. ;)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="mestske_casti">
        <item>"Staré Mesto"</item>
        <item>"Ruzinov"</item>
        <item>"Vrakuňa"</item>
        <item>"Podunajské Biskupice"</item>
        <item>"Nové Mesto"</item>
        <item>"Rača"</item>
        <item>"Vajnory"</item>
        <item>"Karlova Ves"</item>
        <item>"Dúbravka"</item>
        <item>"Lamač"</item>
        <item>"Devín"</item>
        <item>"Devínska Nová Ves"</item>
        <item>"Záhorská Bystrica"</item>
        <item> "Petržalka"</item>
        <item>"Jarovce"</item>
        <item>"Rusovce"</item>
        <item>"Čunovo"</item>
        <item>"Magistrát hlavného mesta"</item>
        <item>"Rôzne"</item>
    </string-array>

    <string-array name="menu">
        <item>Domov</item>
        <item>Feedbacky</item>
        <item>Profil</item>
        <item>Nastavenia</item>
        <item>Odhlásiť sa</item>
        <item>Admin funkcie</item>
        <item>Tipy</item>
        <item>Moje problemy</item>
    </string-array>

    <string-array name="komunikacia">
        <item>"Facebook"</item>
        <item>"Telefon"</item>
        <item>"Mail"</item>
    </string-array>

    <string name="title_activity_menu_activity">menu_activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="facebook">
        <item>staremesto.sk/</item>
        <item></item>
        <item>martinkurucstarostavrakune/</item>
        <item>Podunajské-Biskupice-správy-život-udalosti-195764097116185/</item>
        <item>banovemesto/</item>
        <item>bratislavaraca/</item>
        <item>BratislavaVajnory/</item>
        <item>karlovavesonline/</item>
        <item>Mestská-časť-Bratislava-Dúbravka-343467569182498/</item>
        <item>lamac.oficialna.stranka/</item>
        <item></item>
        <item></item>
        <item>Záhorská-Bystrica-oficiálna-stránka-134439196731942/</item>
        <item>viembytpetrzalcan/</item>
        <item></item>
        <item></item>
        <item></item>
        <item>Bratislava.sk/</item>
    </string-array>

    <string-array name="tel">
        <item>421 259 246 111</item>
        <item>02/48 28 41 11</item>
        <item>02/40 204 810</item>
        <item>02/45 248 088</item>
        <item>02/45 529 459</item>
        <item>421 249 112 411</item>
        <item>0850 24 25 24</item>
        <item></item>
        <item>02/69202501</item>
        <item>02/647 800 65</item>
        <item>02/6020 2511</item>
        <item>02/60 20 14 00</item>
        <item>02/6595 6210</item>
        <item>02/638 23 065</item>
        <item>02/62860178</item>
        <item>02/68 20 70 11</item>
        <item>02 62 850 621</item>
        <item>421 259 356 111</item>
    </string-array>

    <string-array name="mail">
        <item>starosta@staremesto.sk</item>
        <item>ruzinov@ruzinov.sk</item>
        <item>starosta@vrakuna.sk</item>
        <item>starosta@mupb.sk</item>
        <item>podatelna@banm.sk</item>
        <item>info@raca.sk</item>
        <item>vajnory@vajnory.sk</item>
        <item></item>
        <item>starosta@dubravka.sk</item>
        <item>sekretariat@lamac.sk</item>
        <item>starostka@devin.sk</item>
        <item>staznosti@mudnv.sk</item>
        <item>starosta@zahorskabystrica.sk</item>
        <item>starosta@petrzalka.sk</item>
        <item>starosta@jarovce.sk</item>
        <item>starosta@bratislava-rusovce.sk</item>
        <item>miestnyurad@mc-cunovo.sk</item>
        <item>info@bratislava.sk</item>
    </string-array>

    <string-array name="web">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>

    </string-array>


</resources>
