<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/et_problem_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/db_create_problem_et_name_hint"
            android:inputType="textPersonName" />

        <Switch
            android:id="@+id/s_joinable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_create_problem_rb_joinable" />

        <TextView
            android:id="@+id/tv_problem_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_create_problem_tv_warning"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b_create_problem"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_create_problem_b_create_text" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>