<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="oak.oakapplication.PostsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Posts_et_title"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@+id/et_postText" />

        <EditText
            android:id="@+id/et_postText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Posts_et_text"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Posts_et_location"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/b_addImg1" />

        <TextView
            android:id="@+id/tv_address_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_light"
            tools:text="Adresa sa nasla" />

        <Button
            android:id="@+id/b_addImg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Posts_b_addImg1"
            app:layout_constraintTop_toBottomOf="@+id/b_addImg2" />

        <Button
            android:id="@+id/b_addImg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Posts_b_addImg2"
            app:layout_constraintTop_toBottomOf="@+id/sp_categories" />

        <Button
            android:id="@+id/b_addFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Feedback"
            app:layout_constraintTop_toBottomOf="@+id/et_tags" />

        <Button
            android:id="@+id/b_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Posts_b_post"
            app:layout_constraintTop_toBottomOf="@+id/b_addImg1"
            app:layout_constraintVertical_bias="0.965" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
