<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_editComment"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="0dp"
            android:text="@string/ci_b_edit" />

        <Button
            android:id="@+id/b_plus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ci_b_plus" />

        <Button
            android:id="@+id/b_minus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ci_b_minus" />

        <TextView
            android:id="@+id/tv_timeSince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_commentOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_commentReputation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_commentText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.02" />

            <ImageView
                android:id="@+id/iv_ownerPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@color/cardview_light_background" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>